edit routers
